layout issue

--- a/src/components/EventInviteDialog/EventInviteDialog.scss
+++ b/src/components/EventInviteDialog/EventInviteDialog.scss
@@ -54,7 +54,7 @@ $avatar-size: 20px;
 }
 
 .inviteButton {
-  margin-top: 10px;
+  margin-top: auto;
   margin-left: auto;  
 }
 
